src/AIS/AIS_SelectionScheme.hxx
@@ -22,7 +22,9 @@ enum AIS_SelectionScheme
   AIS_SelectionScheme_Add,          //!< adds    detected object to current selection
   AIS_SelectionScheme_Remove,       //!< removes detected object from the current selection
   AIS_SelectionScheme_XOR,          //!< performs XOR for detected objects, other selected not touched
-  AIS_SelectionScheme_Clear         //!< clears current selection
+  AIS_SelectionScheme_Clear,        //!< clears current selection
+  AIS_SelectionScheme_ReplaceExtra, //!< replace with one difference: if result of replace is an empty,
+                                    //!< and current selection contains detected element, it will be selected
 };
 
 #endif // _AIS_SelectionScheme_HeaderFile
