src/ViewerTest/ViewerTest_ViewerCommands.cxx
@@ -7264,6 +7264,10 @@ static Standard_Integer VSelect (Draw_Interpretor& ,
     {
       aSelScheme = AIS_SelectionScheme_Replace;
     }
+    else if (anArg == "-replaceextra")
+    {
+      aSelScheme = AIS_SelectionScheme_ReplaceExtra;
+    }
     else if (anArg == "-xor"
           || anArg == "-shift")
     {
@@ -14846,7 +14850,7 @@ void ViewerTest::ViewerCommands(Draw_Interpretor& theCommands)
     "\n\t\t: When -closeOnEscape is specified, view will be closed on pressing Escape.",
     __FILE__, VDiffImage, group);
   theCommands.Add ("vselect",
-    "vselect x1 y1 [x2 y2 [x3 y3 ... xn yn]] [-allowoverlap 0|1] [-replace|-xor|-add|-remove]\n"
+    "vselect x1 y1 [x2 y2 [x3 y3 ... xn yn]] [-allowoverlap 0|1] [-replace|-replaceextra|-xor|-add|-remove]\n"
     "- emulates different types of selection:\n"
     "- 1) single click selection\n"
     "- 2) selection with rectangle having corners at pixel positions (x1,y1) and (x2,y2)\n"
@@ -14855,7 +14859,7 @@ void ViewerTest::ViewerCommands(Draw_Interpretor& theCommands)
     "     If the flag is set to 1, both sensitives that were included completely and overlapped partially by defined \n"
     "     rectangle or polygon will be detected, otherwise algorithm will chose only fully included sensitives.\n"
     "     Default behavior is to detect only full inclusion. (partial inclusion - overlap - is not allowed by default)\n"
-    "- 5) selection scheme replace, xor, add or remove (replace by default)",
+    "- 5) selection scheme replace, replaceextra, xor, add or remove (replace by default)",
     __FILE__, VSelect, group);
   theCommands.Add ("vmoveto",
     "vmoveto [x y] [-reset]"
